mdapiout/objects/Mix_Item__c.object
<CustomObject>
    <label>Mix Item</label>
    <nameField>
        <displayFormat>MI-{0000000}</displayFormat>
        <label>MixItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mix Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Merchandise__c</fullName>
        <label>Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Mix Items</relationshipLabel>
        <relationshipName>Mix_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchandising_Mix__c</fullName>
        <label>Merchandising Mix</label>
        <referenceTo>Merchandising_Mix__c</referenceTo>
        <relationshipLabel>Mix Items</relationshipLabel>
        <relationshipName>Mix_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>